[gd_scene load_steps=52 format=2]

[ext_resource path="res://scenes/inventory.gd" type="Script" id=1]
[ext_resource path="res://scenes/main.gd" type="Script" id=2]
[ext_resource path="res://scripts/DialogueNode.gd" type="Script" id=3]
[ext_resource path="res://shaders/outline.shader" type="Shader" id=4]
[ext_resource path="res://assets/fonts/tres/mousetrap-outline.tres" type="DynamicFont" id=5]
[ext_resource path="res://shaders/blur.shader" type="Shader" id=6]
[ext_resource path="res://shaders/palette_screen.shader" type="Shader" id=7]
[ext_resource path="res://assets/graphics/ui/notepad.png" type="Texture" id=8]
[ext_resource path="res://assets/graphics/ui/new_entry_indicator.png" type="Texture" id=9]
[ext_resource path="res://scenes/speechOptions.tscn" type="PackedScene" id=11]
[ext_resource path="res://scenes/wallet.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/speechPhone.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/backgrounds/background.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/phoneBooth.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/menu/menu.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/mobile/mobile.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/menu/pauseMenu.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/howToPlay.tscn" type="PackedScene" id=19]
[ext_resource path="res://scenes/inventory/invItem.tscn" type="PackedScene" id=20]
[ext_resource path="res://scenes/speechSelf.tscn" type="PackedScene" id=21]
[ext_resource path="res://assets/palettes/night.png" type="Texture" id=23]
[ext_resource path="res://assets/graphics/ui/inventory-arrow.png" type="Texture" id=24]
[ext_resource path="res://assets/graphics/ui/inventory-arrow-hover.png" type="Texture" id=25]
[ext_resource path="res://assets/graphics/ui/inventory-tab.png" type="Texture" id=26]
[ext_resource path="res://assets/graphics/items/mobile_inv.png" type="Texture" id=27]
[ext_resource path="res://assets/graphics/items/coins_4.png" type="Texture" id=28]
[ext_resource path="res://assets/graphics/items/coins_1.png" type="Texture" id=29]
[ext_resource path="res://assets/graphics/items/coins_2.png" type="Texture" id=30]
[ext_resource path="res://assets/graphics/items/coins_3.png" type="Texture" id=31]
[ext_resource path="res://shaders/white_coin_outline.tres" type="Material" id=32]
[ext_resource path="res://assets/graphics/wallet/wallet.png" type="Texture" id=33]
[ext_resource path="res://scenes/description.gd" type="Script" id=34]
[ext_resource path="res://scenes/coins_inv.gd" type="Script" id=35]
[ext_resource path="res://scenes/cursors.tscn" type="PackedScene" id=36]
[ext_resource path="res://scenes/notepad/notepad.tscn" type="PackedScene" id=37]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/outline = false
shader_param/width = 1.0
shader_param/outline_color = Color( 0.937255, 1, 0.913725, 1 )

[sub_resource type="GDScript" id=2]
script/source = "extends TextureButton
signal change_description(new_text)
export(String) var description

func _on_invItem_mouse_entered():
	material.set_shader_param(\"outline\",true)
	emit_signal(\"change_description\",description)

func _on_invItem_mouse_exited():
	material.set_shader_param(\"outline\",false)
	emit_signal(\"change_description\",\"\")

func _process(delta):
	$indicator.visible = Data.get_data(\"new_info_in_notepad\",false)
"

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 4 )
shader_param/outline = false
shader_param/width = 1.0
shader_param/outline_color = Color( 0.937255, 1, 0.913725, 1 )

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 4 )
shader_param/outline = false
shader_param/width = 1.0
shader_param/outline_color = Color( 0.937255, 1, 0.913725, 1 )

[sub_resource type="GDScript" id=5]
script/source = "extends TextureButton
export(String) var description

func _on_invItem_mouse_entered():
	material.set_shader_param(\"outline\",true)
	Data.set_data(\"description\",description)

func _on_invItem_mouse_exited():
	material.set_shader_param(\"outline\",false)
	Data.set_data(\"description\",\"\")
"

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("holder:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 367, 106 ), Vector2( 435, 106 ), Vector2( 431, 106 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("holder/invBtn:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -64, 0 ), Vector2( 4, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("holder:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 431, 106 ), Vector2( 361, 106 ), Vector2( 367, 106 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("holder/invBtn:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -70, 0 ), Vector2( -64, 0 ) ]
}

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 35, 118 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 10, 20 )

[sub_resource type="Animation" id=10]
resource_name = "fadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "fadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 2 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
length = 3.5
tracks/0/type = "value"
tracks/0/path = NodePath("rectTop:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.4, 2.2, 3.1 ),
"transitions": PoolRealArray( 2, -2, 1, 5, 1 ),
"update": 0,
"values": [ Vector2( 450, 375 ), Vector2( 450, 286.011 ), Vector2( 450, 324.646 ), Vector2( 450, 304.327 ), Vector2( 450, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rectTop:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rectBot:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 1.4, 2.2, 3.1 ),
"transitions": PoolRealArray( 2, -2, 1, 4, 1 ),
"update": 0,
"values": [ Vector2( 450, 375 ), Vector2( 450, 286.011 ), Vector2( 450, 324.646 ), Vector2( 450, 304.327 ), Vector2( 450, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("rectBot:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 1.4, 2.2, 3.1 ),
"transitions": PoolRealArray( 2, -2, 1, 4, 1 ),
"update": 0,
"values": [ Vector2( 0, 375 ), Vector2( 0, 463.989 ), Vector2( 0, 425.354 ), Vector2( 0, 445.674 ), Vector2( 0, 750 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("rectBot:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../OLDblur/blur:material:shader_param/blur_amount")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 5.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../OLDblur/blur:mouse_filter")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 2 ]
}

[sub_resource type="ShaderMaterial" id=13]
shader = ExtResource( 7 )

[sub_resource type="Animation" id=14]
length = 8.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="ShaderMaterial" id=15]
shader = ExtResource( 6 )
shader_param/blur_amount = 0.0

[sub_resource type="RectangleShape2D" id=16]
extents = Vector2( 1, 1 )

[node name="main" type="Node"]
script = ExtResource( 2 )

[node name="DialogueNode" type="Node" parent="."]
script = ExtResource( 3 )

[node name="background" parent="." instance=ExtResource( 14 )]
pause_mode = 2
palette = ExtResource( 23 )

[node name="phoneBooth" parent="." instance=ExtResource( 15 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="inventory" type="Control" parent="CanvasLayer"]
anchor_left = -0.00222222
anchor_right = 0.997778
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="notepad" type="TextureButton" parent="CanvasLayer/inventory"]
material = SubResource( 1 )
margin_left = 395.0
margin_top = 32.0
margin_right = 450.0
margin_bottom = 80.0
texture_normal = ExtResource( 8 )
script = SubResource( 2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="indicator" type="TextureRect" parent="CanvasLayer/inventory/notepad"]
visible = false
margin_left = 38.0
margin_top = 4.0
margin_right = 49.0
margin_bottom = 22.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="holder" type="TextureRect" parent="CanvasLayer/inventory"]
material = SubResource( 3 )
margin_left = 431.0
margin_top = 106.0
margin_right = 521.0
margin_bottom = 341.0
texture = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="invBtn" type="TextureButton" parent="CanvasLayer/inventory/holder"]
margin_left = 1.0
margin_top = 6.0
margin_right = 22.0
margin_bottom = 46.0
rect_scale = Vector2( -1, 1 )
rect_pivot_offset = Vector2( 10.5, 0 )
texture_normal = ExtResource( 24 )
texture_hover = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="items" type="VBoxContainer" parent="CanvasLayer/inventory/holder"]
margin_left = 29.0
margin_top = 15.0
margin_right = 84.0
margin_bottom = 133.0
custom_constants/separation = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wallet" parent="CanvasLayer/inventory/holder/items" instance=ExtResource( 20 )]
texture_normal = ExtResource( 33 )
description = "my wallet"

[node name="mobile" type="TextureButton" parent="CanvasLayer/inventory/holder/items"]
material = SubResource( 4 )
margin_top = 39.0
margin_right = 55.0
margin_bottom = 91.0
texture_normal = ExtResource( 27 )
script = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}
description = "my phone"

[node name="coins" type="TextureButton" parent="CanvasLayer/inventory/holder/items"]
margin_top = 97.0
margin_right = 55.0
margin_bottom = 145.0
rect_min_size = Vector2( 53, 48 )
script = ExtResource( 35 )

[node name="coins1" type="TextureRect" parent="CanvasLayer/inventory/holder/items/coins"]
material = ExtResource( 32 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 29 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins2" type="TextureRect" parent="CanvasLayer/inventory/holder/items/coins"]
visible = false
material = ExtResource( 32 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins3" type="TextureRect" parent="CanvasLayer/inventory/holder/items/coins"]
visible = false
material = ExtResource( 32 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 31 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins4" type="TextureRect" parent="CanvasLayer/inventory/holder/items/coins"]
visible = false
material = ExtResource( 32 )
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 28 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/inventory"]
anims/hideInv = SubResource( 6 )
anims/showInv = SubResource( 7 )

[node name="Area2D" type="Area2D" parent="CanvasLayer/inventory"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CanvasLayer/inventory/Area2D"]
position = Vector2( 486, 223 )
shape = SubResource( 8 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="CanvasLayer/inventory/Area2D"]
position = Vector2( 441, 132 )
shape = SubResource( 9 )

[node name="notepad" parent="CanvasLayer" instance=ExtResource( 37 )]
visible = false

[node name="black" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/black"]
anims/fadeIn = SubResource( 10 )
anims/fadeOut = SubResource( 11 )

[node name="speechPhone" parent="CanvasLayer" instance=ExtResource( 13 )]
visible = false
margin_left = 100.053
margin_top = 250.888
margin_right = 100.053
margin_bottom = 250.888

[node name="speechOptions" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="speechSelf" parent="CanvasLayer" instance=ExtResource( 21 )]
visible = false

[node name="OLDfirstTransit" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="rectTop" type="ColorRect" parent="CanvasLayer/OLDfirstTransit"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -750.0
color = Color( 0.0196078, 0.027451, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rectBot" type="ColorRect" parent="CanvasLayer/OLDfirstTransit"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 750.0
color = Color( 0.0196078, 0.027451, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="transitAnim" type="AnimationPlayer" parent="CanvasLayer/OLDfirstTransit"]
anims/open = SubResource( 12 )

[node name="OLDPaletteShader" type="BackBufferCopy" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 1, 1, 0 )
copy_mode = 2
rect = Rect2( 0, 0, 450, 750 )
__meta__ = {
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/OLDPaletteShader"]
material = SubResource( 13 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/OLDPaletteShader"]
anims/fadeIn = SubResource( 14 )

[node name="OLDblur" type="BackBufferCopy" parent="CanvasLayer"]
visible = false
scale = Vector2( 1.00702, 1.00457 )
copy_mode = 2
rect = Rect2( 0, 0, 450, 750 )
__meta__ = {
"_edit_lock_": true
}

[node name="blur" type="ColorRect" parent="CanvasLayer/OLDblur"]
material = SubResource( 15 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="cursors" parent="CanvasLayer" instance=ExtResource( 36 )]

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
layer = 4

[node name="description" type="Control" parent="CanvasLayer2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 34 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer2/description"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -199.0
margin_top = -54.0
margin_right = 199.0
custom_fonts/font = ExtResource( 5 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer2/description"]
wait_time = 3.0
one_shot = true

[node name="Scenes" type="ResourcePreloader" parent="."]
resources = [ PoolStringArray( "howToPlay", "menu", "mobile", "pauseMenu", "wallet" ), [ ExtResource( 19 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 12 ) ] ]

[node name="mouse" type="Area2D" parent="."]
position = Vector2( 431, 106 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="mouse"]
shape = SubResource( 16 )

[connection signal="coin_collected" from="phoneBooth" to="." method="_on_phoneBooth_coin_collected"]
[connection signal="notepad_open_request" from="phoneBooth" to="." method="_on_notepad_pressed"]
[connection signal="phone_call_begun" from="phoneBooth" to="." method="_on_phoneBooth_phone_call_begun"]
[connection signal="phone_dialed_unknown_number" from="phoneBooth" to="." method="_on_phoneBooth_phone_dialed_unknown_number"]
[connection signal="phone_hung_up" from="phoneBooth" to="." method="_on_phoneBooth_phone_hung_up"]
[connection signal="phone_picked_up" from="phoneBooth" to="." method="_on_phoneBooth_phone_picked_up"]
[connection signal="mouse_entered" from="CanvasLayer/inventory/notepad" to="CanvasLayer/inventory/notepad" method="_on_invItem_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/inventory/notepad" to="CanvasLayer/inventory/notepad" method="_on_invItem_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/inventory/notepad" to="." method="_on_notepad_pressed"]
[connection signal="pressed" from="CanvasLayer/inventory/holder/items/wallet" to="." method="_on_wallet_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/inventory/holder/items/mobile" to="CanvasLayer/inventory/holder/items/mobile" method="_on_invItem_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/inventory/holder/items/mobile" to="CanvasLayer/inventory/holder/items/mobile" method="_on_invItem_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/inventory/holder/items/mobile" to="." method="_on_mobile_pressed"]
[connection signal="mouse_entered" from="CanvasLayer/inventory/holder/items/coins" to="CanvasLayer/inventory/holder/items/coins" method="_on_coins_mouse_entered"]
[connection signal="mouse_exited" from="CanvasLayer/inventory/holder/items/coins" to="CanvasLayer/inventory/holder/items/coins" method="_on_coins_mouse_exited"]
[connection signal="pressed" from="CanvasLayer/inventory/holder/items/coins" to="." method="_on_coins_pressed"]
[connection signal="area_entered" from="CanvasLayer/inventory/Area2D" to="CanvasLayer/inventory" method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="CanvasLayer/inventory/Area2D" to="CanvasLayer/inventory" method="_on_Area2D_area_exited"]
[connection signal="line_started" from="CanvasLayer/speechPhone" to="." method="_on_speechPhone_line_started"]
[connection signal="pressed" from="CanvasLayer/speechOptions" to="." method="_on_speechOptions_pressed"]
[connection signal="fade_in_request" from="CanvasLayer/speechSelf" to="." method="_on_speechSelf_fade_in_request"]
[connection signal="self_dialogue_finished" from="CanvasLayer/speechSelf" to="." method="_on_speechSelf_self_dialogue_finished"]
[connection signal="timeout" from="CanvasLayer2/description/Timer" to="CanvasLayer2/description" method="_on_Timer_timeout"]
